err/undaqtools.err
Listing '.'...
Listing './bin'...
Compiling './bin/undaq.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/undaqTools'...
Listing './lib/python3.5/site-packages/undaqTools/deprecated'...
Compiling './lib/python3.5/site-packages/undaqTools/deprecated/old_convert_daq.py'...
***   File "./lib/python3.5/site-packages/undaqTools/deprecated/old_convert_daq.py", line 127
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/undaqTools/examples'...
Listing './lib/python3.5/site-packages/undaqTools/misc'...
Compiling './lib/python3.5/site-packages/undaqTools/misc/base.py'...
***   File "./lib/python3.5/site-packages/undaqTools/misc/base.py", line 83
    exec template in namespace
                ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/undaqTools/misc/recordtype.py'...
***   File "./lib/python3.5/site-packages/undaqTools/misc/recordtype.py", line 250
    exec template in namespace
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/undaqTools/scripts'...
Listing './lib/python3.5/site-packages/undaqTools/tests'...
Compiling './lib/python3.5/site-packages/undaqTools/tests/test_element.py'...
***   File "./lib/python3.5/site-packages/undaqTools/tests/test_element.py", line 303
    self.assertEqual(ds.shape, (1L, 10658L))
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/undaqTools-0.2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
